clusters/holton-talos-prod/holtonmetal-com/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: holtonmetal-com
  namespace: holtonmetal-com
spec:
  parentRefs:
  - name: holtonmetal-com-gateway
    namespace: holtonmetal-com
    sectionName: https
  - name: holtonmetal-com-gateway
    namespace: holtonmetal-com
    sectionName: https-www
  hostnames:
  - holtonmetal.com
  - www.holtonmetal.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: holtonmetal-com
      port: 80
